--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-flexbox-grid": "^2.1.2",
     "react-popper": "^1.3.2",
     "react-scripts": "2.1.1",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "react-social-icons": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,9 +25,6 @@
     ">0.2%",
     "not dead",
     "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "react-social-icons": "^3.1.0"
-  }
+    "not op_mini all"]
+
 }
