--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-flexbox-grid": "^2.1.2",
     "react-popper": "^1.3.2",
     "react-scripts": "2.1.1",
-    "reactstrap": "^6.5.0",
-    "react-social-icons": "^3.1.0"
+    "react-social-icons": "^3.1.0",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,6 +26,6 @@
     ">0.2%",
     "not dead",
     "not ie <= 11",
-    "not op_mini all"]
-
+    "not op_mini all"
+  ]
 }
