--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-flexbox-grid": "^2.1.2",
+    "react-horizontal-scrolling-menu": "^0.4.3",
     "react-popper": "^1.3.2",
     "react-scripts": "2.1.1",
     "react-social-icons": "^3.1.0",
